# divisor

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  README.md  ideas.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: divisor.yml
divisor/: _flux.py  app.py  cli_helpers.py  cli_input.py  cli_menu.py  commands.py  contents.py  controller.py  denoise_step.py  flux_controller.py  flux_divide.py  hardware.py  hyperchain.py  interaction_context.py  keybinds.py  layer_dropout.py  noise.py  registry.py  save.py  sequencer.py  spec.py  state.py  variant.py
divisor/acestep/: apg_guidance.py  cpu_offload.py  data_sampler.py  gradio.py  gui.py  pipeline_ace_step.py
divisor/acestep/language_segmentation/: LangSegment.py  __init__.py
divisor/acestep/models/: ace_step_transformer.py
divisor/acestep/music_dcae/: music_dcae_pipeline.py
divisor/acestep/ui/: components.py
divisor/dimoo/: config.py  inference_mmu.py  modeling_xllmx_dimoo.py  prompt_utils.py  text_understanding_generator.py
divisor/dimoo_modules/: inference_mmu.py
divisor/dimoo_modules/generators/: text_understanding_generator.py
divisor/dimoo_modules/model/: __init__.py  modeling_llada.py  modeling_xllmx_dimoo.py
divisor/dimoo_modules/utils/: generation_utils.py  image_utils.py  prompt_utils.py
divisor/dream/: app.py  configuration_dream.py  generation_utils.py  modeling_dream.py  tokenization_dream.py
divisor/duo/: configuration_duo.py  modeling_duo.py
divisor/flux1/: __main__.py  autoencoder.py  image_embedder.py  layers.py  loading.py  math.py  model.py  prompt.py  sampling.py  spec.py  system_messages.py  text_embedder.py
divisor/flux2/: __init__.py  autoencoder.py  cli.py  model.py  openrouter_api_client.py  prompt.py  sampling.py  system_messages.py  text_encoder.py  util.py
divisor/flux_modules/: __main__.py  autoencoder.py  image_embedder.py  layers.py  loading.py  lora.py  math.py  model.py  prompt.py  sampling.py  sampling_extensions.py  spec.py  text_embedder.py  util.py
divisor/fudoki_modules/: eval_loop.py  inference_i2t_local.py  inference_t2i_local.py  model.py  prompt.py
divisor/fudoki_modules/flow_matching/loss/: generalized_loss.py
divisor/fudoki_modules/flow_matching/path/: affine.py  geodesic.py  mixture.py  path.py
divisor/fudoki_modules/flow_matching/path/scheduler/: schedule_transform.py
divisor/fudoki_modules/flow_matching/solver/: discrete_solver.py  ode_solver.py  riemannian_ode_solver.py
divisor/fudoki_modules/flow_matching/utils/manifolds/: sphere.py  torus.py  utils.py
divisor/fudoki_modules/janus/models/: clip_encoder.py  modeling_vlm.py  processing_vlm.py  siglip_vit.py
divisor/fudoki_modules/janus/utils/: io.py
divisor/mini/: layers.py  model.py  prompt.py  sampling.py  util.py
divisor/mmada/: app.py  config.py  configuration_llada.py  generate.py  gradio.py  live_token.py  loading.py  modeling_llada.py  modeling_mmada.py  modeling_sdar.py  prompting_utils.py  sampling.py  spec.py  system_messages.py  text_embedder.py
divisor/trado/: __init__.py  app.py  configuration_sdar.py  generate.py  modeling_sdar.py  prompt.py  rms_norm.py  sampling.py  spec.py  tokenization_qwen2.py  tokenization_qwen2_fast.py
divisor/ui/: entry.py
divisor/xflux1/: autoencoder.py  layers.py  loading.py  model.py  pipeline.py  prompt.py  sampling.py  util.py
docs/: divisor.html  index.html  search.js
docs/divisor/: app.html  cli_helpers.html  cli_input.html  cli_menu.html  commands.html  contents.html  controller.html  denoise_step.html  flux1.html  flux2.html  interaction_context.html  keybinds.html  layer_dropout.html  mmada.html  noise.html  spec.html  state.html  trado.html  variant.html  xflux1.html
docs/divisor/flux1/: autoencoder.html  image_embedder.html  layers.html  loading.html  lora.html  math.html  model.html  prompt.html  sampling.html  spec.html  system_messages.html  text_embedder.html
docs/divisor/flux2/: autoencoder.html  model.html  prompt.html  sampling.html  system_messages.html  text_encoder.html  util.html
docs/divisor/mmada/: app.html  config.html  configuration_llada.html  configuration_sdar.html  gradio.html  live_token.html  loading.html  modeling_llada.html  modeling_mmada.html  modeling_sdar.html  prompting_utils.html  sampling.html  spec.html  text_embedder.html
docs/divisor/trado/: app_cuda.html  configuration_sdar.html  generate.html  modeling_sdar.html  prompt.html  rms_norm.html  sampling.html  spec.html  tokenization_qwen2.html  tokenization_qwen2_fast.html
docs/divisor/xflux1/: autoencoder.html  layers.html  loading.html  model.html  prompt.html  sampling.html  util.html
outputs/: output_20251225003049_0_input_params.json
tests/: __init__.py  test_app_entrypoints.py  test_choice_registry.py  test_commands_sampling_integration.py  test_duo.py  test_find_mir_spec.py  test_prompt_model_specs.py  test_spec_populate.py
tests/tests/: test_noise.py
