[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "divisor"
version = "0.1.4"
description = "fragment / denoise / process"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # "fire>=0.7.1",
    # "gradio>=5.23.1",
    # "nnll[full]",
    # "transformers",
]
[project.scripts]
dvzr = "divisor.app:main"
divisor = "divisor.app:main"

[dependency-groups]

dev = [
  "nnll[dev]",
  "pdoc>=16.0.0",
]
[project.optional-dependencies]
cuda = [
  "jetengine @ git+https://github.com/Labman42/JetEngine.git ; sys_platform != 'darwin'",
]
[tool.pyright]
include = ["divisor"]
exclude = [
  "**/__pycache__", # cache directories
  "./typings",      # generated type stubs
]
[tool.setuptools]
packages = ["divisor"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[tool.uv]
package = true
preview = true

[tool.uv.sources]

nnll = { git = "https://github.com/darkshapes/nnll" }
transformers = { git = "https://github.com/huggingface/transformers" }
jetengine = { git = "https://github.com/Labman42/JetEngine.git" }

[tool.ruff]
line-length    = 160
include        = ["*.py"]
extend-exclude = ["**/__pycache__", "./typings"]

[tool.ruff.lint]
ignore = ["E731"]

[tool.pylint]
max-line-length = 140
ignore-paths    = ["^tests/.*$", "test_.*$"]
disable         = ["C0415"]
